lab2/Code/syntax.output
State 20 conflicts: 1 shift/reduce
State 27 conflicts: 1 shift/reduce
State 32 conflicts: 1 shift/reduce


Grammar

    0 $accept: Program $end

    1 Program: ExtDefList

    2 ExtDefList: ExtDef ExtDefList
    3           | %empty

    4 ExtDef: Specifier ExtDecList SEMI
    5       | Specifier SEMI
    6       | Specifier FunDec CompSt
    7       | Specifier error SEMI
    8       | error

    9 ExtDecList: VarDec
   10           | VarDec COMMA ExtDecList

   11 Specifier: TYPE
   12          | StructSpecifier

   13 StructSpecifier: STRUCT OptTag LC DefList RC
   14                | STRUCT Tag
   15                | STRUCT OptTag LC DefList error RC

   16 OptTag: ID
   17       | %empty

   18 Tag: ID

   19 VarDec: ID
   20       | VarDec LB INT RB
   21       | VarDec LB INT error RB

   22 FunDec: ID LP VarList RP
   23       | ID LP RP
   24       | error RP

   25 VarList: ParamDec COMMA VarList
   26        | ParamDec
   27        | ParamDec error COMMA VarList

   28 ParamDec: Specifier VarDec

   29 CompSt: LC DefList StmtList RC

   30 StmtList: Stmt StmtList
   31         | %empty

   32 Stmt: Exp SEMI
   33     | CompSt
   34     | RETURN Exp SEMI
   35     | IF LP Exp RP Stmt
   36     | IF LP Exp RP Stmt ELSE Stmt
   37     | WHILE LP Exp RP Stmt
   38     | Exp error SEMI
   39     | IF LP Exp error RP Stmt ELSE Stmt

   40 DefList: Def DefList
   41        | %empty

   42 Def: Specifier DecList SEMI
   43    | error SEMI

   44 DecList: Dec
   45        | Dec COMMA DecList

   46 Dec: VarDec
   47    | VarDec ASSIGNOP Exp

   48 Exp: Exp ASSIGNOP Exp
   49    | Exp AND Exp
   50    | Exp OR Exp
   51    | Exp RELOP Exp
   52    | Exp PLUS Exp
   53    | Exp MINUS Exp
   54    | Exp STAR Exp
   55    | Exp DIV Exp
   56    | LP Exp RP
   57    | MINUS Exp
   58    | NOT Exp
   59    | ID LP Args RP
   60    | ID LP RP
   61    | Exp LB Exp RB
   62    | Exp DOT ID
   63    | ID
   64    | INT
   65    | FLOAT
   66    | error

   67 Args: Exp COMMA Args
   68     | Exp


Terminals, with rules where they appear

$end (0) 0
error (256) 7 8 15 21 24 27 38 39 43 66
INT (258) 20 21 64
FLOAT (259) 65
ID (260) 16 18 19 22 23 59 60 62 63
SEMI (261) 4 5 7 32 34 38 42 43
COMMA (262) 10 25 27 45 67
ASSIGNOP (263) 47 48
RELOP (264) 51
PLUS (265) 52
MINUS (266) 53 57
STAR (267) 54
DIV (268) 55
AND (269) 49
OR (270) 50
DOT (271) 62
NOT (272) 58
TYPE (273) 11
LP (274) 22 23 35 36 37 39 56 59 60
RP (275) 22 23 24 35 36 37 39 56 59 60
LB (276) 20 21 61
RB (277) 20 21 61
LC (278) 13 15 29
RC (279) 13 15 29
STRUCT (280) 13 14 15
RETURN (281) 34
IF (282) 35 36 39
ELSE (283) 36 39
WHILE (284) 37
LOWER_THAN_ELSE (285)


Nonterminals, with rules where they appear

$accept (31)
    on left: 0
Program (32)
    on left: 1, on right: 0
ExtDefList (33)
    on left: 2 3, on right: 1 2
ExtDef (34)
    on left: 4 5 6 7 8, on right: 2
ExtDecList (35)
    on left: 9 10, on right: 4 10
Specifier (36)
    on left: 11 12, on right: 4 5 6 7 28 42
StructSpecifier (37)
    on left: 13 14 15, on right: 12
OptTag (38)
    on left: 16 17, on right: 13 15
Tag (39)
    on left: 18, on right: 14
VarDec (40)
    on left: 19 20 21, on right: 9 10 20 21 28 46 47
FunDec (41)
    on left: 22 23 24, on right: 6
VarList (42)
    on left: 25 26 27, on right: 22 25 27
ParamDec (43)
    on left: 28, on right: 25 26 27
CompSt (44)
    on left: 29, on right: 6 33
StmtList (45)
    on left: 30 31, on right: 29 30
Stmt (46)
    on left: 32 33 34 35 36 37 38 39, on right: 30 35 36 37 39
DefList (47)
    on left: 40 41, on right: 13 15 29 40
Def (48)
    on left: 42 43, on right: 40
DecList (49)
    on left: 44 45, on right: 42 45
Dec (50)
    on left: 46 47, on right: 44 45
Exp (51)
    on left: 48 49 50 51 52 53 54 55 56 57 58 59 60 61 62 63 64 65
    66, on right: 32 34 35 36 37 38 39 47 48 49 50 51 52 53 54 55 56
    57 58 61 62 67 68
Args (52)
    on left: 67 68, on right: 59 67


State 0

    0 $accept: . Program $end

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    Program          go to state 4
    ExtDefList       go to state 5
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 1

    8 ExtDef: error .

    $default  reduce using rule 8 (ExtDef)


State 2

   11 Specifier: TYPE .

    $default  reduce using rule 11 (Specifier)


State 3

   13 StructSpecifier: STRUCT . OptTag LC DefList RC
   14                | STRUCT . Tag
   15                | STRUCT . OptTag LC DefList error RC

    ID  shift, and go to state 9

    $default  reduce using rule 17 (OptTag)

    OptTag  go to state 10
    Tag     go to state 11


State 4

    0 $accept: Program . $end

    $end  shift, and go to state 12


State 5

    1 Program: ExtDefList .

    $default  reduce using rule 1 (Program)


State 6

    2 ExtDefList: ExtDef . ExtDefList

    error   shift, and go to state 1
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    $end  reduce using rule 3 (ExtDefList)

    ExtDefList       go to state 13
    ExtDef           go to state 6
    Specifier        go to state 7
    StructSpecifier  go to state 8


State 7

    4 ExtDef: Specifier . ExtDecList SEMI
    5       | Specifier . SEMI
    6       | Specifier . FunDec CompSt
    7       | Specifier . error SEMI

    error  shift, and go to state 14
    ID     shift, and go to state 15
    SEMI   shift, and go to state 16

    ExtDecList  go to state 17
    VarDec      go to state 18
    FunDec      go to state 19


State 8

   12 Specifier: StructSpecifier .

    $default  reduce using rule 12 (Specifier)


State 9

   16 OptTag: ID .
   18 Tag: ID .

    LC        reduce using rule 16 (OptTag)
    $default  reduce using rule 18 (Tag)


State 10

   13 StructSpecifier: STRUCT OptTag . LC DefList RC
   15                | STRUCT OptTag . LC DefList error RC

    LC  shift, and go to state 20


State 11

   14 StructSpecifier: STRUCT Tag .

    $default  reduce using rule 14 (StructSpecifier)


State 12

    0 $accept: Program $end .

    $default  accept


State 13

    2 ExtDefList: ExtDef ExtDefList .

    $default  reduce using rule 2 (ExtDefList)


State 14

    7 ExtDef: Specifier error . SEMI
   24 FunDec: error . RP

    SEMI  shift, and go to state 21
    RP    shift, and go to state 22


State 15

   19 VarDec: ID .
   22 FunDec: ID . LP VarList RP
   23       | ID . LP RP

    LP  shift, and go to state 23

    $default  reduce using rule 19 (VarDec)


State 16

    5 ExtDef: Specifier SEMI .

    $default  reduce using rule 5 (ExtDef)


State 17

    4 ExtDef: Specifier ExtDecList . SEMI

    SEMI  shift, and go to state 24


State 18

    9 ExtDecList: VarDec .
   10           | VarDec . COMMA ExtDecList
   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB

    COMMA  shift, and go to state 25
    LB     shift, and go to state 26

    $default  reduce using rule 9 (ExtDecList)


State 19

    6 ExtDef: Specifier FunDec . CompSt

    LC  shift, and go to state 27

    CompSt  go to state 28


State 20

   13 StructSpecifier: STRUCT OptTag LC . DefList RC
   15                | STRUCT OptTag LC . DefList error RC

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error  [reduce using rule 41 (DefList)]
    RC     reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 31
    Def              go to state 32


State 21

    7 ExtDef: Specifier error SEMI .

    $default  reduce using rule 7 (ExtDef)


State 22

   24 FunDec: error RP .

    $default  reduce using rule 24 (FunDec)


State 23

   22 FunDec: ID LP . VarList RP
   23       | ID LP . RP

    TYPE    shift, and go to state 2
    RP      shift, and go to state 33
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 35
    ParamDec         go to state 36


State 24

    4 ExtDef: Specifier ExtDecList SEMI .

    $default  reduce using rule 4 (ExtDef)


State 25

   10 ExtDecList: VarDec COMMA . ExtDecList

    ID  shift, and go to state 37

    ExtDecList  go to state 38
    VarDec      go to state 18


State 26

   20 VarDec: VarDec LB . INT RB
   21       | VarDec LB . INT error RB

    INT  shift, and go to state 39


State 27

   29 CompSt: LC . DefList StmtList RC

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 41 (DefList)]
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 40
    Def              go to state 32


State 28

    6 ExtDef: Specifier FunDec CompSt .

    $default  reduce using rule 6 (ExtDef)


State 29

   43 Def: error . SEMI

    SEMI  shift, and go to state 41


State 30

   42 Def: Specifier . DecList SEMI

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 43
    Dec      go to state 44


State 31

   13 StructSpecifier: STRUCT OptTag LC DefList . RC
   15                | STRUCT OptTag LC DefList . error RC

    error  shift, and go to state 45
    RC     shift, and go to state 46


State 32

   40 DefList: Def . DefList

    error   shift, and go to state 29
    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    error   [reduce using rule 41 (DefList)]
    INT     reduce using rule 41 (DefList)
    FLOAT   reduce using rule 41 (DefList)
    ID      reduce using rule 41 (DefList)
    MINUS   reduce using rule 41 (DefList)
    NOT     reduce using rule 41 (DefList)
    LP      reduce using rule 41 (DefList)
    LC      reduce using rule 41 (DefList)
    RC      reduce using rule 41 (DefList)
    RETURN  reduce using rule 41 (DefList)
    IF      reduce using rule 41 (DefList)
    WHILE   reduce using rule 41 (DefList)

    Specifier        go to state 30
    StructSpecifier  go to state 8
    DefList          go to state 47
    Def              go to state 32


State 33

   23 FunDec: ID LP RP .

    $default  reduce using rule 23 (FunDec)


State 34

   28 ParamDec: Specifier . VarDec

    ID  shift, and go to state 37

    VarDec  go to state 48


State 35

   22 FunDec: ID LP VarList . RP

    RP  shift, and go to state 49


State 36

   25 VarList: ParamDec . COMMA VarList
   26        | ParamDec .
   27        | ParamDec . error COMMA VarList

    error  shift, and go to state 50
    COMMA  shift, and go to state 51

    RP  reduce using rule 26 (VarList)


State 37

   19 VarDec: ID .

    $default  reduce using rule 19 (VarDec)


State 38

   10 ExtDecList: VarDec COMMA ExtDecList .

    $default  reduce using rule 10 (ExtDecList)


State 39

   20 VarDec: VarDec LB INT . RB
   21       | VarDec LB INT . error RB

    error  shift, and go to state 52
    RB     shift, and go to state 53


State 40

   29 CompSt: LC DefList . StmtList RC

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 27
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 65
    Stmt      go to state 66
    Exp       go to state 67


State 41

   43 Def: error SEMI .

    $default  reduce using rule 43 (Def)


State 42

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB
   46 Dec: VarDec .
   47    | VarDec . ASSIGNOP Exp

    ASSIGNOP  shift, and go to state 68
    LB        shift, and go to state 26

    $default  reduce using rule 46 (Dec)


State 43

   42 Def: Specifier DecList . SEMI

    SEMI  shift, and go to state 69


State 44

   44 DecList: Dec .
   45        | Dec . COMMA DecList

    COMMA  shift, and go to state 70

    $default  reduce using rule 44 (DecList)


State 45

   15 StructSpecifier: STRUCT OptTag LC DefList error . RC

    RC  shift, and go to state 71


State 46

   13 StructSpecifier: STRUCT OptTag LC DefList RC .

    $default  reduce using rule 13 (StructSpecifier)


State 47

   40 DefList: Def DefList .

    $default  reduce using rule 40 (DefList)


State 48

   20 VarDec: VarDec . LB INT RB
   21       | VarDec . LB INT error RB
   28 ParamDec: Specifier VarDec .

    LB  shift, and go to state 26

    $default  reduce using rule 28 (ParamDec)


State 49

   22 FunDec: ID LP VarList RP .

    $default  reduce using rule 22 (FunDec)


State 50

   27 VarList: ParamDec error . COMMA VarList

    COMMA  shift, and go to state 72


State 51

   25 VarList: ParamDec COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 73
    ParamDec         go to state 36


State 52

   21 VarDec: VarDec LB INT error . RB

    RB  shift, and go to state 74


State 53

   20 VarDec: VarDec LB INT RB .

    $default  reduce using rule 20 (VarDec)


State 54

   66 Exp: error .

    $default  reduce using rule 66 (Exp)


State 55

   64 Exp: INT .

    $default  reduce using rule 64 (Exp)


State 56

   65 Exp: FLOAT .

    $default  reduce using rule 65 (Exp)


State 57

   59 Exp: ID . LP Args RP
   60    | ID . LP RP
   63    | ID .

    LP  shift, and go to state 75

    $default  reduce using rule 63 (Exp)


State 58

   57 Exp: MINUS . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 76


State 59

   58 Exp: NOT . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 77


State 60

   56 Exp: LP . Exp RP

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 78


State 61

   34 Stmt: RETURN . Exp SEMI

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 79


State 62

   35 Stmt: IF . LP Exp RP Stmt
   36     | IF . LP Exp RP Stmt ELSE Stmt
   39     | IF . LP Exp error RP Stmt ELSE Stmt

    LP  shift, and go to state 80


State 63

   37 Stmt: WHILE . LP Exp RP Stmt

    LP  shift, and go to state 81


State 64

   33 Stmt: CompSt .

    $default  reduce using rule 33 (Stmt)


State 65

   29 CompSt: LC DefList StmtList . RC

    RC  shift, and go to state 82


State 66

   30 StmtList: Stmt . StmtList

    error   shift, and go to state 54
    INT     shift, and go to state 55
    FLOAT   shift, and go to state 56
    ID      shift, and go to state 57
    MINUS   shift, and go to state 58
    NOT     shift, and go to state 59
    LP      shift, and go to state 60
    LC      shift, and go to state 27
    RETURN  shift, and go to state 61
    IF      shift, and go to state 62
    WHILE   shift, and go to state 63

    RC  reduce using rule 31 (StmtList)

    CompSt    go to state 64
    StmtList  go to state 83
    Stmt      go to state 66
    Exp       go to state 67


State 67

   32 Stmt: Exp . SEMI
   38     | Exp . error SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    error     shift, and go to state 84
    SEMI      shift, and go to state 85
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 68

   47 Dec: VarDec ASSIGNOP . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 96


State 69

   42 Def: Specifier DecList SEMI .

    $default  reduce using rule 42 (Def)


State 70

   45 DecList: Dec COMMA . DecList

    ID  shift, and go to state 37

    VarDec   go to state 42
    DecList  go to state 97
    Dec      go to state 44


State 71

   15 StructSpecifier: STRUCT OptTag LC DefList error RC .

    $default  reduce using rule 15 (StructSpecifier)


State 72

   27 VarList: ParamDec error COMMA . VarList

    TYPE    shift, and go to state 2
    STRUCT  shift, and go to state 3

    Specifier        go to state 34
    StructSpecifier  go to state 8
    VarList          go to state 98
    ParamDec         go to state 36


State 73

   25 VarList: ParamDec COMMA VarList .

    $default  reduce using rule 25 (VarList)


State 74

   21 VarDec: VarDec LB INT error RB .

    $default  reduce using rule 21 (VarDec)


State 75

   59 Exp: ID LP . Args RP
   60    | ID LP . RP

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60
    RP     shift, and go to state 99

    Exp   go to state 100
    Args  go to state 101


State 76

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   57    | MINUS Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 57 (Exp)


State 77

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   58    | NOT Exp .
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    DOT  shift, and go to state 94
    LB   shift, and go to state 95

    $default  reduce using rule 58 (Exp)


State 78

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   56    | LP Exp . RP
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 102
    LB        shift, and go to state 95


State 79

   34 Stmt: RETURN Exp . SEMI
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    SEMI      shift, and go to state 103
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95


State 80

   35 Stmt: IF LP . Exp RP Stmt
   36     | IF LP . Exp RP Stmt ELSE Stmt
   39     | IF LP . Exp error RP Stmt ELSE Stmt

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 104


State 81

   37 Stmt: WHILE LP . Exp RP Stmt

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 105


State 82

   29 CompSt: LC DefList StmtList RC .

    $default  reduce using rule 29 (CompSt)


State 83

   30 StmtList: Stmt StmtList .

    $default  reduce using rule 30 (StmtList)


State 84

   38 Stmt: Exp error . SEMI

    SEMI  shift, and go to state 106


State 85

   32 Stmt: Exp SEMI .

    $default  reduce using rule 32 (Stmt)


State 86

   48 Exp: Exp ASSIGNOP . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 107


State 87

   51 Exp: Exp RELOP . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 108


State 88

   52 Exp: Exp PLUS . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 109


State 89

   53 Exp: Exp MINUS . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 110


State 90

   54 Exp: Exp STAR . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 111


State 91

   55 Exp: Exp DIV . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 112


State 92

   49 Exp: Exp AND . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 113


State 93

   50 Exp: Exp OR . Exp

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 114


State 94

   62 Exp: Exp DOT . ID

    ID  shift, and go to state 115


State 95

   61 Exp: Exp LB . Exp RB

    error  shift, and go to state 54
    INT    shift, and go to state 55
    FLOAT  shift, and go to state 56
    ID     shift, and go to state 57
    MINUS  shift, and go to state 58
    NOT    shift, and go to state 59
    LP     shift, and go to state 60

    Exp  go to state 116


State 96

   47 Dec: VarDec ASSIGNOP Exp .
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 47 (Dec)


State 97

   45 DecList: Dec COMMA DecList .

    $default  reduce using rule 45 (DecList)


State 98

   27 VarList: ParamDec error COMMA VarList .

    $default  reduce using rule 27 (VarList)


State 99

   60 Exp: ID LP RP .

    $default  reduce using rule 60 (Exp)


State 100

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID
   67 Args: Exp . COMMA Args
   68     | Exp .

    COMMA     shift, and go to state 117
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 68 (Args)


State 101

   59 Exp: ID LP Args . RP

    RP  shift, and go to state 118


State 102

   56 Exp: LP Exp RP .

    $default  reduce using rule 56 (Exp)


State 103

   34 Stmt: RETURN Exp SEMI .

    $default  reduce using rule 34 (Stmt)


State 104

   35 Stmt: IF LP Exp . RP Stmt
   36     | IF LP Exp . RP Stmt ELSE Stmt
   39     | IF LP Exp . error RP Stmt ELSE Stmt
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    error     shift, and go to state 119
    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 120
    LB        shift, and go to state 95


State 105

   37 Stmt: WHILE LP Exp . RP Stmt
   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    RP        shift, and go to state 121
    LB        shift, and go to state 95


State 106

   38 Stmt: Exp error SEMI .

    $default  reduce using rule 38 (Stmt)


State 107

   48 Exp: Exp . ASSIGNOP Exp
   48    | Exp ASSIGNOP Exp .
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    ASSIGNOP  shift, and go to state 86
    RELOP     shift, and go to state 87
    PLUS      shift, and go to state 88
    MINUS     shift, and go to state 89
    STAR      shift, and go to state 90
    DIV       shift, and go to state 91
    AND       shift, and go to state 92
    OR        shift, and go to state 93
    DOT       shift, and go to state 94
    LB        shift, and go to state 95

    $default  reduce using rule 48 (Exp)


State 108

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   51    | Exp RELOP Exp .
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    PLUS   shift, and go to state 88
    MINUS  shift, and go to state 89
    STAR   shift, and go to state 90
    DIV    shift, and go to state 91
    DOT    shift, and go to state 94
    LB     shift, and go to state 95

    $default  reduce using rule 51 (Exp)


State 109

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   52    | Exp PLUS Exp .
   53    | Exp . MINUS Exp
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 52 (Exp)


State 110

   48 Exp: Exp . ASSIGNOP Exp
   49    | Exp . AND Exp
   50    | Exp . OR Exp
   51    | Exp . RELOP Exp
   52    | Exp . PLUS Exp
   53    | Exp . MINUS Exp
   53    | Exp MINUS Exp .
   54    | Exp . STAR Exp
   55    | Exp . DIV Exp
   61    | Exp . LB Exp RB
   62    | Exp . DOT ID

    STAR  shift, and go to state 90
    DIV   shift, and go to state 91
    DOT   shift, and go to state 94
    LB    shift, and go to state 95

    $default  reduce using rule 53 (Exp)

